edit calendar policy

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,10 +26,10 @@
 
             <div class="group relative cursor-pointer">
               <div class="flex items-center justify-between">
-                <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "nav-top-link #{class_names(active: current_page?(medical_procedures_path))}" %>
+                <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "nav-top-link #{class_names(active: current_page?(medical_procedures_path))}" if policy(MedicalProcedure).index? %>
               </div>
               <div class="invisible absolute z-50 flex w-full flex-col bg-green-900 py-1 group-hover:visible" onClick="">
-                <%= link_to "Calendar", medical_calendar_path, class: "nav-sub-link" if policy(Animal).index? %>
+                <%= link_to "Calendar", medical_calendar_path, class: "nav-sub-link" if policy(MedicalProcedure).medical_calendar? %>
               </div>
             </div>
             
@@ -155,10 +155,16 @@
             <% animal_types_except_dogs.each do |animal_type| %>
               <%= link_to animal_type.name, animals_path(:animal_type_id => animal_type.id), class: "nav-sub-link-mobile #{class_names(active: current_page?(aviaries_path))}" if policy(Animal).index? %>
             <% end %>
-          </div>
-          <div class="header_link">
-            <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "#{class_names(active: current_page?(medical_procedures_path))}" %>
-          </div>
+
+            <div class="header_link">
+              <%= link_to t('menu.header.medicine'), medical_procedures_path, class: "#{class_names(active: current_page?(medical_procedures_path))}" if policy(MedicalProcedure).index?  %>
+            </div>
+            <div class="icursor-pointer flex flex-col justify-start ml-4 py-1" onClick="">
+              <%= link_to "Calendar", medical_calendar_path, class: "nav-sub-link-mobile #{class_names(active: current_page?(aviaries_path))}" if policy(MedicalProcedure).index? %>
+            </div>
+
+
+
           <% if authenticated? %>
             <div>
               <%= content_tag :span, t('menu.header.аdditions'), class: "header_link" %>
