--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -1,4 +1,4 @@
-<div class="simple-calendar">
+<div class="simple-calenda overflow-x-auto">
   <div class="calendar-heading">
     <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
 
