make calendar on mobile better

--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -1,4 +1,4 @@
-<div class="simple-calendar">
+<div class="simple-calendar overflow-x-auto">
   <div class="calendar-heading">
     <span class="calendar-title">
       <%= t('simple_calendar.week', default: 'Week') %>
