--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -181,6 +181,12 @@
         <i class="fa fa-times" aria-hidden="true"></i>
       </span>
     <% end %>
+  <% elsif @duplicate_animal_id.present? %>
+    <%= link_to animal_path(@duplicate_animal_id) do %>
+      <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
+        <i class="fa fa-times" aria-hidden="true"></i>
+      </span>
+    <% end %>
   <% else %>
     <%= link_to animals_path do %>
       <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
