--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,5 +1,9 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t('text.New') %> <%= t('text.Citizen') %></h1>
+  <h1 class="font-bold text-4xl"><%= t('text.New') %> <%= t('text.Citizen') %>
+    <% if @duplicate_animal_id.present? %>
+      (<%= t('text.Duplicate') %>)
+    <% end %>
+  </h1>
 
   <%= render "form", animal: @animal %>
 
