--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="my-5">
     <%= form.label :animal_type_id, "#{t('activerecord.attributes.animal.animal_type_id')}(*)" %>
-    <%= form.collection_select(:animal_type_id, animal_types, :id, :name, { include_blank: "#{t('text.Select')} ...", required: true }, { class: "input_text_field" }) %>
+    <%= form.collection_select(:animal_type_id, animal_types, :id, :name, { selected: 1, required: true }, { class: "input_text_field" }) %>
   </div>
 
   <div class="my-5">
