--- a/app/assets/stylesheets/simple_calendar.css
+++ b/app/assets/stylesheets/simple_calendar.css
@@ -71,14 +71,14 @@
 }
 
 .simple-calendar .calendar-title {
-  color: black;
+  color: gray-750;
   font-size: 16px;
-  font-weight: 250;
+  font-weight: 400;
 
 }
 
 .simple-calendar .calendar-heading {
-  color: blue;
+  color: text-blue-950;
   font-size: 16px;
   margin: 10px;
 }
