--- a/app/views/medical_procedures/medical_calendar.html.erb
+++ b/app/views/medical_procedures/medical_calendar.html.erb
@@ -1,14 +1,14 @@
 <div class="w-full" data-controller='autosubmit'>
   <a id="top" name="top" style="display: none;">top</a>
   <div class="">
-    <h1>Procedures</h1>
+    <h1><%= t('text.Procedures') %></h1>
     <div>
       <%= month_calendar(attribute: :date_planned, events: @medical_procedures) do |date, medical_procedures| %>
         <div class="day-header">
           <%= date.mday %>
         </div>
         <div class="body-sm-text">
-          <%= link_to "Today List", day_procedures_path(date), class: "link_to", data: {turbo_frame: "_top"} %>
+          <%= link_to t('simple_calendar.Today List'), day_procedures_path(date), class: "link_to", data: {turbo_frame: "_top"} %>
         </div>
         <div>
           <% procedure_types = medical_procedures.group_by(&:procedure_type_id) %>
