--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,11 +1,11 @@
 <div class="simple-calendar overflow-x-auto">
   <div class="calendar-heading">
-    <time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></time>
+    <time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.calendar_month_names')[start_date.month] %> <%= start_date.year %></time>
 
     <nav>
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-      <%= link_to t('simple_calendar.today', default: 'Today'), calendar.url_for_today_view %>
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: "link_to" %> |
+      <%= link_to t('simple_calendar.today', default: 'Today'), calendar.url_for_today_view, class: "link_to" %> |
+      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: "link_to" %>
     </nav>
   </div>
 
