--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -11,18 +11,23 @@
     </div>
   <% end %>
 
-
-  <div class="my-5">
-    <%= form.label :animal_ids, t('label.animals') %>
-    <div class="scrollable-frame">
-      <% animals.each do |animal| %>
-        <div class="checkbox-item">
-          <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box" %>
-          <%= label_tag "animal_#{animal.id}", animal.display_name %>
-        </div>
-      <% end %>
+  <% if medical_procedure.persisted? %>
+    <div class="my-5 body-lg-bold-text">
+      <%= medical_procedure.animal.display_name %>
     </div>
-  </div>
+  <% else %>
+    <div class="my-5">
+      <%= form.label :animal_ids, t('label.Nickname (Select Multiple)') %>
+      <div class="scrollable-frame">
+        <% animals.each do |animal| %>
+          <div class="checkbox-item">
+            <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box" %>
+            <%= label_tag "animal_#{animal.id}", animal.display_name %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 
   <div class="my-5">
     <%= form.label :procedure_type_id %>
@@ -40,7 +45,7 @@
           class: "input_text_field",
           required: true,
           placeholder: "DD-MM-YYYY",
-          value: medical_procedure.date_planned.present? ? medical_procedure.date_planned.strftime("%d-%m-%Y") : nil,
+          value: @date_planned.present? ? @date_planned.strftime("%d-%m-%Y") : nil,
           data: {
             controller: "flatpickr",
             flatpickr_date_format_value: "d-m-Y",
@@ -62,6 +67,7 @@
           } %>
   </div>
   <%= hidden_field_tag 'return_to_animal', return_to_animal %>
+  <%= hidden_field_tag 'return_to_calendar', params[:return_to_calendar] %>
 
   <div class="inline">
     <% if return_to_animal.present? %>
