--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -16,16 +16,23 @@
       <%= medical_procedure.animal.display_name %>
     </div>
   <% else %>
-    <div class="my-5">
-      <%= form.label :animal_ids, t('label.Nickname (Select Multiple)') %>
-      <div class="scrollable-frame">
-        <% animals.each do |animal| %>
-          <div class="checkbox-item">
-            <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box" %>
-            <%= label_tag "animal_#{animal.id}", animal.display_name %>
-          </div>
-        <% end %>
+    <div class="my-5 flex justify-between items-center">
+      <div>
+        <%= form.label :animal_ids, t('label.Nickname (Select Multiple)') %>
       </div>
+      <div class="display inline">
+        <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
+        <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "#{t('text.Select')} ..." , class: "filter_select",
+          :"data-action" => "autosubmit#submit" %>
+      </div>
+    </div>
+    <div class="scrollable-frame">
+      <% animals.each do |animal| %>
+        <div class="checkbox-item">
+          <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box" %>
+          <%= label_tag "animal_#{animal.id}", animal.display_name %>
+        </div>
+      <% end %>
     </div>
   <% end %>
 
