--- a/app/views/medical_procedures/_medical_procedure.html.erb
+++ b/app/views/medical_procedures/_medical_procedure.html.erb
@@ -25,7 +25,7 @@
         <%= t('activerecord.attributes.medical_procedure.description') %>:
       </p>
       <p class="body-lg-text pl-2 inline">
-        <%= medical_procedure.description %>
+        <%= medical_procedure.procedure_type.description %>
       </p>
     </div>
 
