--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with(model: medical_procedure, class: "contents",
-data: { controller: 'animals',
+data: { controller: 'medicine',
           autosubmit_target: "form",
           turbo_frame: "animal-names",
-          action: "animals#submitForm",
+          action: "medicine#submitForm",
           }) do |form| %>
   <% if medical_procedure.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
@@ -28,7 +28,7 @@ data: { controller: 'animals',
       <div class="display inline">
         <label for="sort" class="fancy_label"><%= t('label.sort') %></label>
         <%= select_tag "sort", options_for_select(fields_to_sort_animals, selected: @sort_by), include_blank: "#{t('text.Select')} ..." , value: "0", class: "filter_select",
-          "data-animals-target": "sort_by", :"data-action" => "animals#sortAnimals" %>
+          "data-medicine-target": "sort_by", :"data-action" => "medicine#sortAnimals" %>
       </div>
 
     </div>
@@ -58,7 +58,7 @@ data: { controller: 'animals',
             flatpickr_date_format_value: "d-m-Y",
             flatpickr_alt_input: false, 
             required: true
-          }, "data-animals-target": "date_planned" %>
+          }, "data-medicine-target": "date_planned" %>
   </div>
   <div class="error_text mt-2" id="date_planned_error"></div>
 
