--- a/app/views/medical_procedures/_scrollable_frame.html.erb
+++ b/app/views/medical_procedures/_scrollable_frame.html.erb
@@ -2,7 +2,7 @@
   <div class="scrollable-frame">
     <% animals.each do |animal| %>
       <div class="checkbox-item">
-        <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box", "data-animals-target": "checkbox" %>
+        <%= check_box_tag "animal_ids[]", animal.id, false, id: "animal_#{animal.id}", class: "check_box", "data-medicine-target": "checkbox" %>
         <%= label_tag "animal_ids_#{animal.id}", animal.display_name %>
       </div>
     <% end %>
