--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -90,7 +90,7 @@ data: { controller: 'medicine',
       <% else %>
         <%= form.submit t('forms.buttons.submit'), class: "primary_button" %>
       <% end %>
-      <%= link_to medical_procedure_path(medical_procedure) do %>
+      <%= link_to medical_procedures_path do %>
         <span class="tertiary_button"><%= t('forms.buttons.cancel') %>
           <i class="fa fa-times" aria-hidden="true"></i>
         </span>
