--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -3,9 +3,21 @@
     <time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.calendar_month_names')[start_date.month] %> <%= start_date.year %></time>
 
     <nav>
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: "link_to" %> |
-      <%= link_to t('simple_calendar.today', default: 'Today'), calendar.url_for_today_view, class: "link_to" %> |
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: "link_to" %>
+    <%= link_to calendar.url_for_previous_view do %>
+      <span class="tertiary_button">
+        <i class="fa-solid fa-less-than" aria-hidden="true"></i>
+        <%= t('simple_calendar.previous', default: t('date.calendar_month_names')[(start_date.to_date - 1.month).month]) %>
+      </span>
+    <% end %>
+      <time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.calendar_month_names')[start_date.month] %> <%= start_date.year %></time>
+      <%= link_to calendar.url_for_next_view do %>
+        <span class="tertiary_button">
+          <%= t('simple_calendar.next', default: t('date.calendar_month_names')[(start_date.to_date + 1.month).month]) %>
+          <i class="fa-solid fa-greater-than" aria-hidden="true"></i>
+        </span>
+      <% end %>
+      <%= link_to t('simple_calendar.today', default: 'Today'), calendar.url_for_today_view, class: "link_to" %>
+
     </nav>
   </div>
 
